Small spacing issue on category page

--- a/html/wp-content/themes/twentytwelve/wpsc-default.css
+++ b/html/wp-content/themes/twentytwelve/wpsc-default.css
@@ -90,6 +90,7 @@ Author URI: http://instinct.co.nz
 .wpsc_category_details_description {
 	margin-left: 5px;
 	margin-top: 10px;
+	line-height: 1.714285714rem;
 }
 
 
